--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,75 @@
 * {
+  color: white;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Nunito Sans", sans-serif;
 }
 
+a {
+  text-decoration: none;
+}
 /* Utilities | START */
 
 .container {
-  width: 800px;
+  max-width: 1000px;
   margin: auto;
   overflow: auto;
 }
 
 /* Utilities | END */
+
+/* clear float | START */
+
+.clear {
+  clear: both;
+}
+
+/* clear float | END */
+
+/* header | START */
+
+#main-header {
+  background: url(../img/bg.png) no-repeat center center/cover;
+  height: 700px;
+  width: 100%;
+}
+
+#main-header .container .navbar h1 {
+  float: left;
+  padding-top: 30px;
+  font-size: 18px;
+  letter-spacing: 5px;
+  font-weight: bold;
+}
+
+#main-header .container .navbar ul {
+  list-style: none;
+  float: right;
+  overflow: auto;
+}
+
+#main-header .container .navbar ul li {
+  float: left;
+  overflow: auto;
+}
+
+#main-header .container .navbar ul li a {
+  display: block;
+  padding: 30px 15px;
+}
+
+#main-header .container .about{
+  padding-top: 20%;
+}
+#main-header .container h2 {
+  font-family: 'Libre Baskerville', serif; 
+  font-size: 70px;
+  font-weight: 200;
+}
+
+#main-header .container p {
+  font-size: 25px;
+  color: rgb(221, 218, 218);
+}
+/* header | END */
