--- a/css/style.css
+++ b/css/style.css
@@ -9,10 +9,33 @@
 a {
   text-decoration: none;
 }
+
+/* SCORLLBAR | START */
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #0a0b1a;
+}
+
+/* Handle */
+
+::-webkit-scrollbar-thumb {
+  background: #181b3d;
+}
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(223, 81, 164);
+}
+/* SCORLLBAR | END */
+
 /* Utilities | START */
 
 .container {
-  max-width: 1000px;
+  max-width: 1100px;
   margin: auto;
   overflow: auto;
 }
@@ -27,7 +50,7 @@ a {
 
 /* clear float | END */
 
-/* header | START */
+/* HEADER | START */
 
 #main-header {
   background: url(../img/bg.png) no-repeat center center/cover;
@@ -59,12 +82,12 @@ a {
   padding: 30px 15px;
 }
 
-#main-header .container .about{
+#main-header .container .about {
   padding-top: 20%;
 }
 #main-header .container h2 {
-  font-family: 'Libre Baskerville', serif; 
-  font-size: 70px;
+  font-family: "Libre Baskerville", serif;
+  font-size: 80px;
   font-weight: 200;
 }
 
@@ -72,4 +95,34 @@ a {
   font-size: 25px;
   color: rgb(221, 218, 218);
 }
-/* header | END */
+/* HEADER | END */
+
+/* SECTION-1 | START */
+
+#info {
+  background-color: #0a0b1a;
+  height: 400px;
+  overflow: auto;
+}
+
+#info .container .box {
+  float: left;
+  text-align: center;
+  width: 20%;
+  height: 240px;
+  padding: 60px;
+  margin: 70px 25px;
+  border: 1px solid rgba(121, 121, 121, 0.281);
+  border-radius: 100%;
+}
+
+.box-color {
+  border-right: 2px solid rgb(238, 81, 173) !important;
+  border-bottom: 2px solid rgb(238, 81, 173) !important;
+}
+#info .container h2,
+#info .container p {
+  padding-top: 10px;
+}
+
+/* SECTION-1 | END */
