--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ a {
 /* Utilities | START */
 
 .container {
+  padding: 0 20px;
   max-width: 1100px;
   margin: auto;
   overflow: auto;
@@ -57,7 +58,7 @@ a {
 
 #main-header {
   background: url(../img/bg.png) no-repeat center center/cover;
-  height: 700px;
+  height: 100vh;
   width: 100%;
 }
 
@@ -91,17 +92,17 @@ a {
 }
 
 #main-header .container .about {
-  padding-top: 20%;
+  padding-top: calc(100vh/2.2);
 }
 #main-header .container h2 {
   font-family: "Libre Baskerville", serif;
-  font-size: 80px;
+  font-size: 4rem;
   font-weight: 200;
 }
 
 #main-header .container p {
-  font-size: 25px;
-  color: rgb(214, 213, 213);
+  font-size: 1.8rem;
+  color: rgba(214, 213, 213, 0.63);
 }
 /* HEADER | END */
 
