--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+
 * {
   color: white;
   margin: 0;
@@ -92,7 +93,7 @@ a {
 }
 
 #main-header .container .about {
-  padding-top: calc(100vh/2.2);
+  padding-top: calc(100vh / 2.2);
 }
 #main-header .container h2 {
   font-family: "Libre Baskerville", serif;
@@ -109,32 +110,31 @@ a {
 /* SECTION-1 | START */
 
 #info {
-  height: 400px;
-  overflow: auto;
+  padding: 60px 0;
 }
 
 #info .container .box {
-  float: left;
+  display: inline-block;
   text-align: center;
-  width: 20%;
-  height: 240px;
-  padding: 60px;
-  margin: 70px 25px;
+  width: calc((100vw - 40px)/6);
+  margin: 1vw 1rem;
+  padding: 6vw 1vw;
   border: 1px solid rgba(121, 121, 121, 0.281);
   border-radius: 100%;
 }
+
+
 
 .box-color {
   border-right: 2px solid rgb(238, 81, 173) !important;
   border-bottom: 2px solid rgb(238, 81, 173) !important;
 }
-#info .container h2,
-#info .container p {
-  padding-top: 10px;
-}
+
 .fa-heart {
   color: #252d86;
 }
+
+
 /* SECTION-1 | END */
 
 /* section-2 | START */
