--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 * {
   color: white;
   margin: 0;
@@ -116,14 +115,12 @@ a {
 #info .container .box {
   display: inline-block;
   text-align: center;
-  width: calc((100vw - 40px)/6);
+  width: calc((100vw - 40px) / 6);
   margin: 1vw 1rem;
   padding: 6vw 1vw;
   border: 1px solid rgba(121, 121, 121, 0.281);
   border-radius: 100%;
 }
-
-
 
 .box-color {
   border-right: 2px solid rgb(238, 81, 173) !important;
@@ -134,21 +131,15 @@ a {
   color: #252d86;
 }
 
-
 /* SECTION-1 | END */
 
 /* section-2 | START */
-
-#shows {
-  height: 550px;
-  overflow: auto;
-}
 
 #shows .container h2 {
   float: left;
   text-transform: capitalize;
   font-family: "Libre Baskerville", serif;
-  font-size: 30px;
+  font-size: 1.875rem;
   padding-bottom: 10px;
   margin-bottom: 40px;
 }
@@ -214,10 +205,7 @@ a {
 
 /* section-3 | START */
 
-#reviews {
-  height: 400px;
-  overflow: auto;
-}
+
 
 #reviews .container h2 {
   float: left;
