--- a/css/style.css
+++ b/css/style.css
@@ -164,7 +164,7 @@ a {
 }
 
 #shows .container .show-article img {
-  width: 235px;
+  width: 100%;
   height: 230px;
   border-radius: 8px 8px 0 0;
 }
